// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Campaign Update Block with additional content as tweet snapshot test 1`] = `
<Block
  className={null}
>
  <BlockTitle>
    Campaign Update
  </BlockTitle>
  <Markdown
    className="campaign-update__content -tweet"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus vestibulum.
  </Markdown>
  <Byline
    author="Braümhilda Snosages"
    avatar={Object {}}
    jobTitle="DoSomething.org Staff"
  />
</Block>
`;

exports[`Campaign Update Block with additional content snapshot test 1`] = `
<Block
  className={null}
>
  <BlockTitle>
    Campaign Update
  </BlockTitle>
  <h2>
    Heyo!
  </h2>
  <Markdown
    className="campaign-update__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Vestibulum id ligula porta felis euismod semper. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
  </Markdown>
  <Byline
    author="Braümhilda Snosages"
    avatar={Object {}}
    jobTitle="DoSomething.org Staff"
  />
</Block>
`;

exports[`Campaign Update Block with no additional content snapshot test 1`] = `
<Block
  className={null}
>
  <BlockTitle>
    Campaign Update
  </BlockTitle>
  <h2>
    Heyo!
  </h2>
  <Markdown
    className="campaign-update__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Vestibulum id ligula porta felis euismod semper. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
  </Markdown>
</Block>
`;
